fixing active color for navigation links on mobile, adding new layout for blog posts

--- a/css/base.scss
+++ b/css/base.scss
@@ -354,7 +354,7 @@ input[type=checkbox] {
     border-radius: 0 !important;
   }
   .menu li a:active {
-    background-color: #d00 !important;
+    background-color: #D2A125;
   }
 
   .nav__open-button {
@@ -777,36 +777,14 @@ input[type=checkbox] {
 
 ========== */
 
-.main-post-col {
-  margin-bottom: 20px;
-}
-
 .post-container {
-  width: 950px;
-  margin: 20px auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  padding: 0;
 }
 
 .post-container__content {
-  background-color: rgba(255, 255, 255, 0.95);
-  box-shadow: 0 0 1px #999;
-  color: #222;
   font-size: 24px;
-  line-height: 1.45;
-  padding: 15px 25px;
-  margin-bottom: 20px;
-  h2 {
-    -ms-flex-item-align: center;
-    -ms-grid-row-align: center;
-    align-self: center;
-    padding: 0px 23px;
-    margin: 0;
-    color: #fff;
-    font-size: 54px;
-    line-height: 0.85;
-  }
+  width: 55%;
+  margin: 45px 0 50px 55px;
 }
 
 .post-container__heading-overlay {
